crates/pg_syntax/tests/snapshots/postgres_regress/jsonpath@113.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select '$ ? (@.a < 0.1e1)'::jsonpath;"
---
SelectStmt@0..37
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..36
    TypeCast@7..36
      AConst@7..26
        Sconst@7..26 "'$ ? (@.a < 0.1e1)'"
      Typecast@26..28 "::"
      TypeName@28..36
        Ident@28..36 "jsonpath"
  Ascii59@36..37 ";"

