crates/pg_syntax/tests/snapshots/postgres_regress/jsonpath@116.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select '$ ? (@.a < 10.1e1)'::jsonpath;"
---
SelectStmt@0..38
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..37
    TypeCast@7..37
      AConst@7..27
        Sconst@7..27 "'$ ? (@.a < 10.1e1)'"
      Typecast@27..29 "::"
      TypeName@29..37
        Ident@29..37 "jsonpath"
  Ascii59@37..38 ";"

